fixed alignment issues for google sign buttons of modal

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -412,7 +412,7 @@ footer {
     }
     // Google sign buttons
     .google-button {
-        text-align: center;
+        width: 100%;
         height: 40px;
         border-width: 0;
         background: white;
